--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
-<html>
-<HEAD>
-</HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Grocery Store</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Langar&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-Grocery store
+    <div class="backhead">
+        
+        <img src="menu.png" alt="menulogo">
+        
+        <div class="logo">the Grocery store</div>
+    </div>
+
+    <div class="place1">
+        <img src="Soap_mobile.jpg" alt="soap_mobile">
+    </div>
 </body>
 </html>
+
+
