--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
     <div class="place1">
         <img src="Soap_mobile.jpg" alt="soap_mobile">
     </div>
+    <div class="place2">
+        <img src="cake_mobile.jpg" alt="soap_mobile">
+    </div>
+    <div class="row">
+        <div class="column">
+            <img src="cake_mobile.jpg" alt="cake" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="Soap_mobile.jpg" alt="soap" style="width:100%">
+        </div>
+        <!-- <div class="column">
+            <img src="img_mountains.jpg" alt="Mountains" style="width:100%">
+        </div> -->
+    </div>
 </body>
 </html>
 
