--- a/body.html
+++ b/body.html
@@ -43,6 +43,7 @@
         </div>
     </div>
 
+    <div class="topic">Top Categories:</div>
     <div class="categs">
         <div class="cat">
             Fruits
@@ -76,5 +77,44 @@
         </div>
     </div>
 
+
+    <div class="lay1">
+        <div class="lay1in pic">
+            <img src="san1.jpg" alt="sanitizer" srcset="">
+            <br>
+            <div class="label">
+                Sanitizer
+            </div>
+            
+        </div>
+        <div class="lay1in pic">
+            <img src="tea1.jpg" alt="tea" srcset="">
+            <br>
+            <div class="label">
+                Tea
+            </div>
+        </div>
+        <div class="lay1in pic">
+            <img src="bread2.png" alt="bread" srcset="">
+            <br>
+            <div class="label">
+                Bread
+            </div>
+        </div>
+        <div class="lay1in pic">
+            <img src="milk1.jpg" alt="Milk" srcset="">
+            <br>
+            <div class="label">
+                Milk
+            </div>
+        </div>
+        <div class="lay1in pic">
+            <img src="butter1.jpg" alt="Milk" srcset="">
+            <br>
+            <div class="label">
+                Butter
+            </div>
+        </div>
+    </div>
 </body>
 </html>
