--- a/body.html
+++ b/body.html
@@ -177,21 +177,47 @@
         Kitchen Essentials:
     
     </div>
-    <div >
-        <div class="flow">
-            Hand Wash
+    <div class="Kitcheness">
+        <div class="kit">
+            <div class="esspic">
+                <img src="rice.jpg" alt="Rice" srcset="">
+            </div>
+            <div class="labeless">
+                Rice
+            </div>
         </div>
-        <div class="flow">
-            Dish Wash
+        <div class="kit">
+            <div class="esspic">
+                <img src="spices.jpg" alt="spices" srcset="">
+            </div>
+            <div class="labeless">
+                Spices
+            </div>
         </div>
-        <div class="flow">
-            Cereals
+        <div class="kit">
+            <div class="esspic">
+                <img src="oil.jpg" alt="Oil" srcset="">
+            </div>
+            <div class="labeless">
+                Oil
+            </div>
         </div>
-        <div class="flow">
-            Skincare
+        <div class="kit">
+            <div class="esspic">
+                <img src="ghee.jpg" alt="Ghee" srcset="">
+            </div>
+            <div class="labeless">
+                Ghee
+
+            </div>
         </div>
-        <div class="flow">
-            Haircare
+        <div class="kit">
+            <div class="esspic">
+                <img src="readymade.jpg" alt="ReadyMade" srcset="">
+            </div>
+            <div class="labeless">
+                ReadyMade
+            </div>
         </div>
     </div>
 </body>
