--- a/final.html
+++ b/final.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>body</title>
+    <title>TheGroceryStore</title>
     <link rel="stylesheet" href="final.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://20sas.github.io/gro/GLOGOMINI.png" type="image/x-icon">
 </head>
 <body>
     <div class="wrapper">
