--- a/final.html
+++ b/final.html
@@ -227,7 +227,8 @@
                 About Us
                 <div class="subabout">
                     <div>
-                        Privacy Policy
+                        <a href="privacypolicy.html">
+                        Privacy Policy</a>
                     </div>
                 
                     <div>
