--- a/loginindex.html
+++ b/loginindex.html
@@ -36,6 +36,6 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="js/loginmain.js"></script>
+    <script type="text/javascript" src="loginmain.js"></script>
 </body>
 </html>
