--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
+    <link rel="icon" href="GLOGOMINI.png" type="image/x-icon">
 </head>
 <body>
     <h1>Privacy Policy for The Grocery Store</h1>
