--- a/signupindex.html
+++ b/signupindex.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="loginindex.css">
 </head>
-
 <body>
-    <h1>signup page</h1>
-    This page is under construction
+    <!-- <h1>login page</h1> -->
+    <div class="container">
+        <div class="login-content">
+            <form action="index.html">
+                <img src="GLOGO.png">
+                <h2 class="title"> Sign-up</h2>
+                <div class="input-div one">
+                    <div class="i">
+                        <i class="fas fa-user"></i>
+                    </div>
+                    <div class="div">
+                        <h5>Username</h5>
+                        <input type="text" class="input">
+                    </div>
+                </div>
+                <div class="input-div pass">
+                    <div class="i">
+                        <i class="fas fa-lock"></i>
+                    </div>
+                    <div class="div">
+                        <h5>Password</h5>
+                        <input type="password" class="input">
+                    </div>
+                </div>
+                <a href="#">Forgot Password?</a>
+                <input type="submit" class="btn" value="Sign-up">
+            </form>
+        </div>
+    </div>
+    <script type="text/javascript" src="loginmain.js"></script>
 </body>
-
 </html>
