--- a/signupindex.html
+++ b/signupindex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Sign-up</title>
     <link rel="stylesheet" href="loginindex.css">
     <link rel="icon" href="GLOGOMINI.png" type="image/x-icon">
 </head>
